Fix footer, style ordered list for improved readability

--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,9 @@ html{
 body{
     height: 100%; 
     min-height: 100%;
-    width: 100%; 
     display:flex; 
-    flex-direction: column; 
+    flex-direction: column;
+    margin: auto; 
 }
 
 /*Body Container*/
@@ -141,12 +141,16 @@ ul, ol{
     font-size: 1.3rem;
 }
 
+ol li {
+    margin-bottom: 1.2rem; 
+}
+
 .footer-image{
     text-align: center;
 }
 
 .footer{
-    margin-top: 1rem;
+    margin-top: 3rem;
     background-color: rgb(128, 128, 128,0.2);
     padding: 10px; 
 
@@ -164,6 +168,13 @@ html > footer{
     position:absolute; 
     top: 100%; 
 }
+
+@media all and (max-width: 500px) {
+    .ingredients{
+       width: 100%; 
+    }
+       
+   }
 
 
 
